# textcron

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: feedback.py  translate.py  validate.py
backend/app/models/: schemas.py
backend/app/services/: cron.py  guard.py  langfuse_client.py  llm.py
backend/data/: feedback.db
backend/scripts/: eval_judge.py  judge_prompt.py  test_empty_comment.py  test_flow.py
backend/tests/: conftest.py  golden_dataset.json  test_golden.py
backend/tests/api/: test_translate.py
backend/tests/services/: test_cron.py  test_guard.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: cron.test.ts  cron.ts
frontend/src/components/: CronBadge.test.tsx  CronBadge.tsx  ErrorCard.test.tsx  ErrorCard.tsx  FeedbackWidget.tsx  InputCard.test.tsx  InputCard.tsx  Layout.test.tsx  Layout.tsx  NextTimes.test.tsx  NextTimes.tsx  ResultCard.test.tsx  ResultCard.tsx
frontend/src/hooks/: useTranslate.test.ts  useTranslate.ts
frontend/src/pages/: HomePage.test.tsx  HomePage.tsx
frontend/src/types/: cron.ts
scripts/: take_screenshots.py
spec/: README.md  TEST_PLAN.md
